apps/base/media/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr

    spec:
      containers:
      - name: bazarr
        #image: lscr.io/linuxserver/bazarr:v1.5.1-ls300
        image: ghcr.io/hotio/bazarr:release-1.5.1
        ports:
        - containerPort: 6767

        securityContext:
          allowPrivilegeEscalation: false

        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "512Mi"
            cpu: "500m"

        volumeMounts:
        - name: media
          mountPath: /data
        - name: config
          mountPath: /config
      volumes:
      - name: media
        hostPath:
          path: ${BASE_PATH}/data
          type: Directory
      - name: config
        persistentVolumeClaim:
          claimName: bazarr-config-nfs
