apps/base/media/bazarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - bazarr.homelab
    secretName: bazarr-homelab-tls
  rules:
  - host: bazarr.homelab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bazarr
            port:
              number: 6767
